--- a/4R.md
+++ b/4R.md
@@ -2,9 +2,9 @@
 
 ## The De-centered Search for the Centered Self
 
-  In James Baldwin's second novel, *Giovanni's Room* (1956),  his narrator-protagonist David takes a moment to reflect  on why he suddenly lit out for Europe. He tentatively concludes that he did for the peculiarly American reason that he “wanted to find myself.” The phrase, David insists, is not current “in the language of any other people” and “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.”[@baldwin1956, p. 39] David's sojourn to the Old World does little to render his desires, inclinations, and capacities legible or stable. He remains unable to accept his homosexual longings, particularly for the titular character whom he abandons after Giovanni's conviction for murder, and is so alienated from himself that he is at the end startled by his reflection in the mirror and uncertain of “what moves in this body” and for “what this body is searching"(189).
+  In James Baldwin's second novel, *Giovanni's Room* (1956),  his narrator-protagonist David tentatively concludes that he suddenly lit out for Europe for the peculiarly American reason that he “wanted to find myself.” The phrase, David insists, is not current “in the language of any other people” and “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.”[@baldwin1956, p. 39] David's sojourn to the Old World does little to render his desires, inclinations, and capacities legible or stable. He remains unable to accept his homosexual longings, particularly for the titular character whom he abandons after Giovanni's conviction for murder, and is so alienated from himself that he is at the end startled by his reflection in the mirror and uncertain of “what moves in this body” and for “what this body is searching"(189).
 
-Contemporaries criticized both the novel's unapologetic treatment of homosexuality and its failure to chronicle black life. Charges of decadence and elitism obscured the book’s place in Baldwin’s career-long contention that whites’ demonization of blacks originated in the former’s inability to know themselves. Baldwin was far from alone in his belief that postwar American society made it difficult for Americans to know reliably who they were. Postwar commentators characteristically noted the presence of such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values.  For some the problem lay with the absence of meaningful communities and interpersonal relations brought on by modernity writ large. Others blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools, the media, and the isolation of suburban family life.[On alienation and isolation, see @josephson1962. For popular criticisms of suburbs, bureaucracy, and advertising respectively, see John Keats, *The Crack in the Picture Window* (Boston: Houghton Mifflin, 1957); @whyte1956; and  @packard1957.]
+Contemporaries criticized both the novel's unapologetic treatment of homosexuality and its failure to chronicle black life. These charges of decadence and elitism haunted Baldwin's career and obscured his insight that whites' demonization of blacks originated in the former's inability to know themselves. David's failure, therefore, spoke to a wider cultural problem and Baldwin was not the only observer who believed that Americans had few institutions to aid their search for self. Postwar commentators characteristically noted the presence of such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values.  For some the problem lay with the absence of meaningful communities and interpersonal relations brought on by modernity writ large. Others blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools, the media, and the isolation of suburban family life.[On alienation and isolation, see @josephson1962. For popular criticisms of suburbs, bureaucracy, and advertising respectively, see John Keats, *The Crack in the Picture Window* (Boston: Houghton Mifflin, 1957); @whyte1956; and  @packard1957.]
 
 Postwar concern about the insubstantiality of selves quickly assumed a political cast. Arguing material and objective causes did not explain popular support for Fascist and Communist regimes, analysts turned to psychosocial abnormalities. Erich Fromm's *Escape from Freedom* (1941), Theodor Adorno's *Authoritarian Personality* (1950), philosopher Jacob Talmon’s *Origins of Totalitarian Democracy* (1952), and Hannah Arendt's *Origin of Totalitarianism* (1958) all attributed totalitarian success to the ability of ruling groups to manipulate unfulfilled psychological needs. Although fascist and communist ideologies had little appeal to most Americans, many commentators nonetheless worried that a society of anomic individuals who lacked internalized standards were fodder for poseurs and demagogues. That possibility no doubt fanned an interest in Tocqueville's argument that democracy produced citizens who sought safety i a culture of stifling uniformity and who were capable of massing against those who were distinctive or different.[@mcclay1994 contains a useful summary of the tendency to explain political phenomena by psycho-social factors.] Augmenting the theoretical work of the social critics was that of social psychologists Solomon Asch and Stanley Milgram, who obtained results that suggested most individuals lacked the psychological assuredness to resist a relentless majority or a demanding, unfeeling authority. Asch (1951, 1956) observed that subjects more often than not acceded to the group truth, even when it countered their own perceptions. For his part, Milgram discovered that most people would continue to punish others when ordered to do so. There was, many observers concluded a "Good German" in all of us.[The pertinent studies are @asch1951; @asch1956; and @milgram1963. For a discussion of the implications for the social psychology of postwar politics, see Israel Charny, *Fascism and Democracy in the Human Mind: A Bridge between Mind and Society* (Lincoln: University of Nebraska Press, 2006)]
 
