--- a/5.md
+++ b/5.md
@@ -3,11 +3,11 @@
 ## **American Inclusion and Its Discontents**
 
 
-Few, if any, photographic exhibitions have achieved the popularity of the Museum of Modern Art’s 1955 venture, “Family of Man.” Curated by famed photographer Edward Steichen, the undertaking consisted of  503 distinct images taken in sixty-eight countries by 273 different photographers. After its New York debut, the show spent the next eight years touring the world, stopping in thirty-seven nations before being permanently installed at Common Market headquarters in Steichen’s native Luxembourg. In toto, nine million people saw some version of the exhibit. A book version, which is still in print, has sold four million copies. 
+Few, if any, photographic exhibitions have achieved the popularity of the Museum of Modern Art’s 1955 venture, “Family of Man.” Curated by famed photographer Edward Steichen, the undertaking consisted of  503 distinct images taken in sixty-eight countries by 273 different photographers. After its New York debut, the show spent the next eight years touring the world, stopping in thirty-seven nations before being permanently installed at Common Market headquarters in Steichen’s native Luxembourg. In toto, nine million people saw some version of the exhibit. A book version, which is still in print, has sold four million copies.
 
-As the title suggests, Steichen meant to convey the similarities among the peoples of the world, grouping the images by theme—birth, work, play, courtship, marriage, death—rather than by country of origin. The exhibit underscored its theme of the unity of humanity in the panels of text, written by Steichen’s brother-in-law, Pulitzer-Prize winning poet Carl Sandburg. Sandburg insisted there “is only one man in the world and his name is All Men. There is only one woman in the world and her name is All Women.” Humanity was, he insisted, “one big family hugging close to the ball of Earth for its life and being.” Photographer Barbara Morgan was especially moved by the exhibition’s demonstration that human similarities were more significant than the differences, marveling how American viewers could look upon a polygamist family and see something in common with themselves.[^1]
+As the title suggests, Steichen hoped the exhibit would convey the underlying similarities among the peoples of the world. To that end, he grouped the images by theme—birth, work, play, courtship, marriage, death—rather than by country of origin. The panels of text that accompanied the image, written by Steichen’s brother-in-law, Pulitzer-Prize winning poet Carl Sandburg, underscored the point. Sandburg insisted there “is only one man in the world and his name is All Men. There is only one woman in the world and her name is All Women.” Humanity was, he insisted, “one big family hugging close to the ball of Earth for its life and being.” Photographer Barbara Morgan championed the exhibti for demonstrating that similarities far outweighed ostensible differences, contending that American viewers would glimpse their commonality with a polygamist family.[^1]
 
-Not everyone applauded the exhibition or approved of its ideological position. Writing in 1958, famed photographer Walker Evans criticized what he regarded as the treacly sentimentality of the exhibition (“bogus heartfeeling”), which he saw as a consequence of its false universalism (“human familyhood”). Evans's condemnation echoed one that the French critic Roland Barthes leveled a year earlier but which did not appear in English until 1970. Barthes criticized the “Family of Man” as a mythology, an ideological maneuver that aspired to naturalize history, robbing it of its particularity and its true diversity by postulating a magic transformation in which a surface pluralism gives way to a common mold in which “man is born, works, laughs and dies everywhere in the same way.” Citing the fate of Emmet Till, the black Chicago teenager brutally murdered in Mississippi for ostensibly not understanding local racial codes, Barthes contended that the world was far from a place where fellow feeling transcended group differences.[^2]
+Not everyone applauded the exhibition or approved of its ideological position. Writing in 1958, famed photographer Walker Evans criticized what he regarded as its treacly sentimentality (“bogus heartfeeling”), which he saw as a consequence of its false universalism (“human familyhood”). Evans's condemnation echoed one that the French critic Roland Barthes leveled a year earlier but which did not appear in English until 1970. Barthes criticized the “Family of Man” as a mythology, an ideological maneuver that aspired to naturalize history, robbing it of its particularity and its true diversity by postulating a magic transformation in which a surface pluralism gives way to a common mold in which “man is born, works, laughs and dies everywhere in the same way.” Citing the fate of Emmet Till, the black Chicago teenager brutally murdered in Mississippi for ostensibly leering at a white woman, Barthes contended that fellow feeling rarely, if ever, canceled awareness of  group differences.[^2]
 
 The popularity of the “Family of Man” owed much to its resonance with the dominant postwar attitude of social inclusion. Considerable discussion during those years focused on the acceptance of all kinds and opposition to exclusion or marginalization rooted in birth or status. Films about World War II often depicted military units composed of soldiers, sailors, and marines from diverse backgrounds who learn that acceptance of one another was the American way. Where once native Americans had bemoaned the nation becoming a polyglot boardinghouse, an increasing number of midcentury Americans regarded diversity as a virtue. Asserted the editors of _Fortune_ in 1951, “The presence . . . of a bewildering number of races and national origins, creeds and shibboleths, economic interests and explosive ideas is to him [the American] no problem at all. On the contrary it is a great asset.”[^3] Academic discourse followed suit, often emphasizing inclusive tendencies in the face of broad exclusion. In political science, many scholars stressed the dispersal of power among competing, often newly organized and empowered interests groups, disputing arguments that treated power as concentrated in a ruling elite. Sociologists, for their part, asserted that racial segregation ran afoul of the democratic creed at the heart of national identity, and historians mapped the assimilation process of immigrants and their descendants.[^4] Highlighting American diversity dovetailed nicely with the demands of the country during the Cold War, enabling champions of the West to contrast the variety of American social life with the gray and somber uniformity of totalitarian societies and to present integration as a selling point in the Cold War struggle for the hearts and minds of the decolonizing world.[^5]
 
