--- a/5.md
+++ b/5.md
@@ -11,7 +11,7 @@ Steichen's exhibition was just one of many cultural artifacts that emphasized so
 
 Inclusiveness as value and fact constituted a prime characteristic of academic discourse, as well. Challenging ideas of political power as concentrated in the ruling elite, a growing number of political scientists stressed the dispersal of power among competing, often newly organized and empowered interest groups. Sociologists, for their part, asserted that racial segregation ran afoul of the democratic creed at the heart of national identity, and historians mapped the assimilation process of immigrants and their descendants.[^4] Highlighting American diversity dovetailed nicely with the demands of the country during the Cold War, enabling champions of the West to contrast the variety of American social life with the gray and somber uniformity of totalitarian societies and to present integration as a selling point in the Cold War struggle for the hearts and minds of the decolonizing world.[^5]
 
-Sober observers conceded that this inclusionary spirit and the democratization of power that supposedly accompanied it were often more aspirational than descriptive. Exclusion, hierarchy, and domination were common occurrences in postwar American life. Yet there were enough signs of change that many commentators optimistically anticipated that inclusion and participation were becoming more than empty ideals. Although the 1960s have a reputation as the high tide of postwar reform, the immediate postwar period witnessed, among other noteworthy developments, a dramatic increase in matriculation from families that had never had a member attend, wider dispersal of luxury goods, growing acceptance of Jews and Catholics as legitimate and co-equal participants in American society, the endorsement of full citizenship rights for people of color by the Democratic Party in the North and the Supreme Court (two institutions that had vehemently opposed that goal in the nineteenth century), a dawning perception that domesticity and passivity constituted unproductive constraints on women, and even a stirring on homosexual rights organizations in coastal cities and, in such fields as music and art, tolerance of gays and lesbians.
+Those who discerned an inclusionary spirit and wide dispersal of power conceded the phenomena were often more aspirational than descriptive. Few denied that exclusion, hierarchy, and domination were common occurrences in postwar American life, but many observers recognized enough signs of change to anticipate that inclusion and broad participation were becoming more than empty ideals. Although the 1960s have a reputation as the high tide of postwar reform, the immediate postwar period witnessed, among other noteworthy developments, an increase in college matriculation from families that had never had a member attend, the greater availability of luxury goods, a growing acceptance of Jews and Catholics as legitimate and co-equal participants in American society, the endorsement of full citizenship rights for people of color by the Democratic Party in the North and the Supreme Court (two institutions that had vehemently opposed that goal in the nineteenth century), a dawning perception that domesticity and passivity constituted unproductive constraints on women, and even a stirring of homosexual rights organizations in coastal cities and, in such fields as music and art, tolerance of gays and lesbians.
 
 Those signs led some to envision a time when only those such as Communist, beats, and other deviants would be excluded. It was perhaps not surprising that one classic study, Howard Becker’s _Outsiders_ (1963) argued against the notion that deviants were inherently marginal or ill-suited for social life. They were, Becker insisted, men and women who chose to reject social rules, a matter of attitude rather than birth or necessity.[^6] Those formerly excluded groups who were most successful in being included were those most capable of effacing or toning down their differences from the mainstream. By putting emphasis on home ownership and striving for individual advancement, workers were putting aside any intention of overturning capitalism and becoming middle class. Most ethnic Americans eagerly spoke English, adopted prevailing American customs and mores, and generally diminished the attachment to communities based on national origin. These changes were why so many took pride in the tendencies toward assimilation.
 
