--- a/5.md
+++ b/5.md
@@ -11,11 +11,9 @@ Steichen's exhibition was just one of many cultural artifacts that emphasized so
 
 Inclusiveness as value and fact constituted a prime characteristic of academic discourse, as well. Challenging ideas of political power as concentrated in the ruling elite, a growing number of political scientists stressed the dispersal of power among competing, often newly organized and empowered interest groups. Sociologists, for their part, asserted that racial segregation ran afoul of the democratic creed at the heart of national identity, and historians mapped the assimilation process of immigrants and their descendants.[^4] Highlighting American diversity dovetailed nicely with the demands of the country during the Cold War, enabling champions of the West to contrast the variety of American social life with the gray and somber uniformity of totalitarian societies and to present integration as a selling point in the Cold War struggle for the hearts and minds of the decolonizing world.[^5]
 
-Those who discerned an inclusionary spirit and wide dispersal of power conceded the phenomena were often more aspirational than descriptive. Few denied that exclusion, hierarchy, and domination were common occurrences in postwar American life, but many observers recognized enough signs of change to anticipate that inclusion and broad participation were becoming more than empty ideals. Although the 1960s have a reputation as the high tide of postwar reform, the immediate postwar period witnessed, among other noteworthy developments, an increase in college matriculation from families that had never had a member attend, the greater availability of luxury goods, a growing acceptance of Jews and Catholics as legitimate and co-equal participants in American society, the endorsement of full citizenship rights for people of color by the Democratic Party in the North and the Supreme Court (two institutions that had vehemently opposed that goal in the nineteenth century), a dawning perception that domesticity and passivity constituted unproductive constraints on women, and even a stirring of homosexual rights organizations in coastal cities and, in such fields as music and art, tolerance of gays and lesbians.
+Those who discerned an inclusionary spirit and wide dispersal of power conceded the phenomena were often more aspirational than descriptive. Few denied that exclusion, hierarchy, and domination were common occurrences in postwar American life, but many observers recognized enough signs of change to anticipate that inclusion and broad participation were becoming more than empty ideals. Although the 1960s have a reputation as the high tide of postwar reform, the immediate postwar period witnessed, among other noteworthy developments, an increase in college matriculation from families that had never had a member attend, the greater availability of luxury goods, a growing acceptance of Jews and Catholics as legitimate and co-equal participants in American society, the endorsement of full citizenship rights for people of color by the Democratic Party in the North and the Supreme Court (two institutions that had vehemently opposed that goal in the nineteenth century), a dawning perception that domesticity and passivity constituted unproductive constraints on women, and even a stirring of homosexual rights organizations in coastal cities and, in such fields as music and art, tolerance of gays and lesbians. The assumption that social inclusivity was increasing provided the foundation for Howard Becker’s classic study _Outsiders_ (1963), which argued that deviants were not inherently marginal or ill-suited for social life but were men and women who chose to reject social rules. Their deviance was a matter of attitude rather than birth or necessity.[^6]
 
-Those signs led some to envision a time when only those such as Communist, beats, and other deviants would be excluded. It was perhaps not surprising that one classic study, Howard Becker’s _Outsiders_ (1963), argued against the notion that deviants were inherently marginal or ill-suited for social life. They were, Becker insisted, men and women who chose to reject social rules, a matter of attitude rather than birth or necessity.[^6] Inclusion did indeed work best when members of formerly excluded groups were able to efface or tone down differences with those at the center. Inclusionists hailed, for instance, workers' drive for home ownership and individual advancement as signs of their middle-class character. They also lauded ethnic Americans' embrace of English, American customs, and diminished attachment to national-origin based enclaves.
-
-Racial minorities and women, on the other hand, were less likely to be fully included. Both faced a dedicated opposition convinced that their biological and psychological makeup, which supposedly made them incapable of complete and productive participation. A growing number of activists resisted marginalization, forcefully iterating that their common humanity qualified them for social, cultural, and political inclusion. The excruciatingly slow pace of change, however, led a small but incisive minority of the excluded to reconsider the terms of inclusion. Rather than claim racial minorities and women were essentially no different from whites and men, they insisted that they possessed unique qualities that needed to be recognized and cultivated. Inclusions of such qualities, they averred, were necessary to any definition of the universally "human."Such a goal was, given American practices, extraordinarily difficult to realize. American music was no exception, riven as it was by cultural appropriations and racist business practices, but at rare moments as when Bill Evans sat down with Miles Davis, one might envision legitimate boundary crossings.
+Those who could not easily efface their differences, however, found the actuality of inclusion somewhat less glorious than the promise. Racial minorities and women both faced a dedicated opposition convinced that their biological and psychological makeup, which supposedly made them incapable of complete and productive participation. A growing number of activists resisted marginalization, forcefully iterating that their common humanity qualified them for social, cultural, and political inclusion. The excruciatingly slow pace of change, however, led a small but incisive minority of the excluded to reconsider the terms of inclusion. Rather than claim racial minorities and women were essentially no different from whites and men, they insisted that they possessed unique qualities that needed to be recognized and cultivated. Inclusions of such qualities, they averred, were necessary to any definition of the universally "human."Such a goal was, given American practices, extraordinarily difficult to realize. American music was no exception, riven as it was by cultural appropriations and racist business practices, but at rare moments as when Bill Evans sat down with Miles Davis, one might envision legitimate boundary crossings.
 
 [^1]:	Edward Steichen, _The Family of Man_ (New York: Published for the Museum of Modern Art by the Maco Magazine Corp., 1955); Barbara Morgan, “The Theme Show: A Contemporary Exhibition Technique,” _Aperture_ 3(1955).
 
@@ -38,9 +36,9 @@ Racial minorities and women, on the other hand, were less likely to be fully inc
 
 
 
-After the war, observers on industrial life frequently concluded that the working class had sufficiently matured to be a responsible partner in securing economic growth. The judgment was particularly surprising given the strike wave of 1945-1946 in which nearly five million workers left the job. The wave struck such core industrial sectors as rails, steel, coal, oil, meat packing and automobiles and even resulted in general strikes in Lancaster, Pennsylvania, Rochester, New York, and Oakland, California. The wave in turn prompted condemnations from middle-class consumers and editorials boards across the country for allegedly interfering with prosperous postwar reconversion. Angered voters returned a Republican Congress, which passed the Taft-Hartley Act (1947) over President Truman's veto.  The Act limited the power of organized labor by outlawing the closed shop, allowing states to pass so-called right-to-work laws that prohibited contracts that made union membership a condition of employment, and requiring unions to give eighty days' notice of intention to strike. The strife of the late 1940s, however, proved to be the last gasp of the previous era rather than a forshadowing of continued postwar conflict.
+After the war, observers of industrial life frequently concluded that the working class had sufficiently matured to be a responsible partner in securing economic growth. The judgment was particularly surprising given the strike wave of 1945-1946 in which nearly five million workers left the job. The wave struck such core industrial sectors as rails, steel, coal, oil, meat packing and automobiles and even resulted in general strikes in Lancaster, Pennsylvania, Rochester, New York, and Oakland, California. The wave in turn prompted condemnations from middle-class consumers and editorials boards across the country for allegedly interfering with prosperous postwar reconversion. Angered voters returned a Republican Congress, which passed the Taft-Hartley Act (1947) over President Truman's veto.  The Act limited the power of organized labor by outlawing the closed shop, allowing states to pass so-called right-to-work laws that prohibited contracts that made union membership a condition of employment, and requiring unions to give eighty days' notice of intention to strike. The strife of the late 1940s, however, proved to be the last gasp of the previous era rather than a forshadowing of continued postwar conflict.
 
-To be sure, labor organizations labeled Taft-Hartley a “slave labor law” and conservatives like Arizona senator Barry Goldwater called Auto Workers President Walter Reuther a greater threat to freedom than Sputnik, but neither labor radicalism or business reaction gained much traction. Instead, observers noted a rapprochement, an acceptance, albeit grudging, of the interests of the other side. In part, that acceptance derived from a common recognition of similarities and an understanding by capitalists and the business press of the ways in which workers had assimilated mainstream values. By 1951, _Fortune Magazine_ could famously single out labor unions as the “tool for gaining and keeping as an individual the status and security of a full citizen in a capitalist society.” That tool had “made the worker to an amazing degree a middle-class member of a middle-class society.” _Fortune_ did acknowledge to its readers that the mature unions were still capable of “group greed,” making demands at the expense of the unorganized and clamoring for permanent tenure for members even when technology made jobs obsolete (“featherbedding”). More important was the virtual disappearance class-based thinking that had led union workers to regard business as the “ENEMY.” In its place was a new vision of management as “opposing team in a rough and competitive game.” The change eased the path to the better functioning of the economic engines of prosperity in which both parties had a stake. The editors may well have had in mind Phillip Murray’s presidential address to the 1948 annual convention of the Congress of Industrial Organizations. Speaking in the aftermath of Taft-Hartley that limited or prohibited many of the tools that unions had used to organize, Murray nonetheless rejected the idea of classes, asserting that “the interests of farmers, factory hands, business and professional people, and white-collar toilers prove to be the same.”[^7]
+Although vestiges of the heated rhetoric of the 1930s remained in babor organizations' condemnation of Taft-Hartley as a “slave labor law” and conservative Arizona senator Barry Goldwater's claim that Auto Workers President Walter Reuther constituted a greater threat to freedom than Sputnik, many commentators were more impressed with how labor and management accepted, albeit grudgingly, the validity of the other's interests of the other side. The two sides, the argument went, had come to a mature understanding that their success depended upon that of their opposite. By 1951, _Fortune Magazine_ could famously single out labor unions as the “tool for gaining and keeping as an individual the status and security of a full citizen in a capitalist society.” That tool had “made the worker to an amazing degree a middle-class member of a middle-class society.” _Fortune_ did acknowledge to its readers that the mature unions were still capable of “group greed,” making demands at the expense of the unorganized and clamoring for permanent tenure for members even when technology made jobs obsolete (“featherbedding”). More important was the virtual disappearance class-based thinking that had led union workers to regard business as the “ENEMY.” In its place was a new vision of management as “opposing team in a rough and competitive game.” The change eased the path to the better functioning of the economic engines of prosperity in which both parties had a stake. The editors may well have had in mind Phillip Murray’s presidential address to the 1948 annual convention of the Congress of Industrial Organizations. Speaking in the aftermath of Taft-Hartley that limited or prohibited many of the tools that unions had used to organize, Murray nonetheless rejected the idea of classes, asserting that “the interests of farmers, factory hands, business and professional people, and white-collar toilers prove to be the same.”[^7]
 
 [^7]:	Davenport, _U. S. A.: The Permanent Revolution_, 91; Harvey Swados, _On the Line_ (Urbana: University of Illinois Press, 1990), xv-xvi.
 
